# python-registry-sandbox

./: README.md  pyproject.toml
libs/mylib1/: README.md  setup.py
libs/mylib1/mylib1/: hello.py
libs/mylib2/: setup.py
libs/mylib2/mylib2/: hello.py
libs/samplelib/: setup.py
libs/samplelib/samplelib/: hello.py
local/: compose.yml  upload.sh
local/pypi/: Dockerfile
local/pypi-tester/: run.sh
